--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>@ptrrdrck</title>
+    <title>site.name</title>
     <link href="./style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,19 +10,19 @@
   </head>
 
   <body>
+    <!--
     <div class="bg-video">
       <div class="overlay"></div>
       <div id="player"></div>
     </div>
+    <script src="./bg-vid.js" type="text/javascript"></script>
+    -->
     <header>
     </header>
     <p class="fade-in about">&iexcl;welcome!</p>
     <br>
-    <p class="fade-in about">this is a placeholder page for <span class="text-gradient">web.address</span></p>
+    <p class="fade-in about">this is a placeholder page for <span class="text-gradient">site.name</span></p>
     <br>
-    <a class="fade-in" href="https://github.com/ptrrdrck/repo-name" target="_blank">github</a>
-    <br>
-    <br>
-    <script src="./bg-vid.js" type="text/javascript"></script>
+    <a class="fade-in" href="https://github.com/ptrrdrck/repo-name" target="_blank">&rarr;github</a>
   </body>
 </html>
